[project]
name = "webscraping-sf"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "internetarchive>=4.0.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.8.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "sparqlwrapper>=2.0.0",
    "statsmodels>=0.14.0",
]
